Initial version of Rover adding. Cleanup.
